background attachment is fixed on safari.

--- a/index-style.css
+++ b/index-style.css
@@ -11,16 +11,30 @@
 /*showcase links*/
 @import url(/assets/home/showcase.css);
 
-body {
+html, body {
     background-color: aliceblue;
+    font-family: monospace;
+}
+
+/*background*/
+#background-animated {
     background-image: url(/assets/home/images/background.gif);
     background-size: cover;
     background-position: center top;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    font-family: monospace;
 
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    z-index:0;
+
+    width: 100%;
+    height: 100%;
 }
+
 @keyframes rotate
 {
      0%   { transform: rotate3d(0, 1, 0, 0deg) rotate(0); }
